Fixed cards alignment in work exp and education sections

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -164,6 +164,8 @@ body {
 .column {
     flex: 1;
     min-width: 250px;
+    display: flex;
+    flex-direction: column;
 }
 
 .column-name {
@@ -178,6 +180,7 @@ body {
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
+    flex: 1;
 }
 
 .entry-title {
